# Valentina-server

./: .gitignore  README.md  eventpass.db  pyproject.toml
backend/api/: main.py
backend/app/: main.py
backend/app/api/v1/: event.py
backend/app/middleware/: error_handler.py
backend/app/services/event/: services.py
backend/data/: database.py  models.py
backend/mail/: config.py  main.py
backend/test/: conftest.py
frontend/: index.html  style.css
frontend/assets/: script.js  style.css
frontend/frontend/: index.html  script.js  style.css
